src/objects/c2g__codaPeriod__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpperiod</customHelpPage>
    <description>Defines the accounting periods into which a financial year is divided.</description>
    <fields>
        <fullName>c2g__AP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Cash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Periods</relationshipLabel>
        <relationshipName>Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodGroup__c</fullName>
        <label>Period Group</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodNumber__c</fullName>
        <label>Period Number</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__YearName__c</fullName>
        <label>Year Name</label>
        <referenceTo>c2g__codaYear__c</referenceTo>
        <relationshipLabel>Periods</relationshipLabel>
        <relationshipName>Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Period</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__YearName__c</columns>
        <columns>c2g__PeriodNumber__c</columns>
        <columns>c2g__Description__c</columns>
        <columns>c2g__EndDate__c</columns>
        <columns>c2g__Closed__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Period ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>